<resources>
    <string name="app_name">Nature Trivia</string>
    <string name="leaderboard_activity_title">Leaderboard</string>
    <string name="answer_easy_sunflower">Sunflower</string>
    <string name="answer_easy_rose">Rose</string>
    <string name="answer_easy_cyclamen">Cyclamen</string>
    <string name="answer_easy_daisy">Daisy</string>
    <string name="answer_easy_anemone">Anemone</string>
    <string name="answer_easy_bleeding_heart">Bleeding Heart</string>
    <string name="answer_easy_iris">Iris</string>
    <string name="answer_easy_jasmine">Jasmine</string>
    <string name="answer_easy_lilac">Lilac</string>
    <string name="answer_easy_lotus">Lotus</string>
    <string name="answer_easy_narcissus">Narcissus</string>
    <string name="answer_easy_orchid">Orchid</string>
    <string name="answer_hard_dandelion">Dandelion</string>
    <string name="answer_hard_echinacea">Echinacea</string>
    <string name="answer_hard_forsythia">Forsythia</string>
    <string name="answer_hard_heliotrope">Heliotrope</string>
    <string name="answer_hard_hibiscus">Hibiscus</string>
    <string name="answer_hard_magnolia">Magnolia</string>
    <string name="answer_hard_mallow">Mallow</string>
    <string name="answer_hard_nemesia">Nemesia</string>
    <string name="answer_hard_nerine">Nerine</string>
    <string name="answer_hard_saponaria">Saponaria</string>
    <string name="answer_hard_sedum">Sedum</string>
    <string name="answer_hard_snapdragons">Snapdragons</string>
    <string name="answer_medium_lily">Lily</string>
    <string name="answer_medium_nepeta">Nepeta</string>
    <string name="answer_medium_nicotiana">Nicotiana</string>
    <string name="answer_medium_nymphea">Nymphea</string>
    <string name="answer_medium_passion_flower">Passion Flower</string>
    <string name="answer_medium_peony">Peony</string>
    <string name="answer_medium_petunia">Petunia</string>
    <string name="answer_medium_phlox">Phlox</string>
    <string name="answer_medium_snowdrop">Snowdrop</string>
    <string name="answer_medium_spider_flower">Spider Fower</string>
    <string name="answer_medium_tiger_flower">Tiger Flower</string>
    <string name="answer_medium_tulip">Tulip</string>
    <string name="main_activity_play">Play</string>
    <string name="main_activity_leaderboard">Leaderboard</string>
    <string name="leaderboard_activity_back">Back</string>
    <string name="result_activity_please_enter_name">Please enter your name to save</string>
    <string name="result_activity_your_score">Your Score:</string>
    <string name="result_activity_enter_name">Enter your name here</string>
    <string name="result_activity_save">Save</string>
    <string name="result_activity_saved">Saved</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="main_activity_tap_here">Tap here</string>
    <string name="back">Back</string>
    <string name="help_dialog_fragment_title">How To Play:</string>
    <string name="help_dialog_fragment_how_to_play">This is a trivia game about foliage.<br /> In the game, you will recieve a picture of a foliage, and you will have 4 options in which to pick the correct answer from.<br />Choose the answer you think is correct, and if it is true you will receive points! if not you will lose a life, also beware of the timer!<br />Also, you can check the encyclopedia in order to learn about the foliage names.</string>
    <string name="ok">OK</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="game_over">Game Over</string>
    <string name="time_up">Time up!</string>
    <string name="game_name">Nature Trivia</string>
</resources>