<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/help_dialog_fragment_title"
        android:id="@+id/help_dialog_fragment_titleTv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_dialog_fragment_titleTv"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:text="@string/help_dialog_fragment_how_to_play"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/bright_blue"
        android:textSize="25sp"
        android:layout_gravity="bottom|center"
        android:id="@+id/help_dialog_fragment_okTv"/>





</RelativeLayout>