<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity_sound_btn">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="5dp"
        android:text="@string/main_activity_play"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/result_activity_buttons_selector"
        android:id="@+id/main_screen_choices_fragment_play_btn"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="5dp"
        android:text="@string/main_activity_leaderboard"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/result_activity_buttons_selector"
        android:id="@+id/main_activity_fragment_leaderboard_btn"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="5dp"
        android:text="@string/encyclopedia"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/result_activity_buttons_selector"
        android:id="@+id/main_activity_encyclopedia_btn"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>